Make TransitionButton a child of the buttons

--- a/addons/menusystem/plugin.cfg
+++ b/addons/menusystem/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="MenuSystem"
-description=""
+description="Menusystem to transition from one menu to the next"
 author="MikyGus"
-version="1.0"
+version="1.1"
 script="init.cs"
